--- a/source/scss/services.scss
+++ b/source/scss/services.scss
@@ -152,6 +152,7 @@
   .services__img {
     width:  auto;
     margin-left: 0;
+    object-fit: cover;
   }
 
   .services__count {
